--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 pydantic
 urllib3
-uvicorn
-fastapi
-colabcode
-spacy
-scispacy
+uvicorn==0.13.1
+fastapi==0.110.2
+colabcode==0.3.0
+spacy==3.6.1
+scispacy==0.5.3
 https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.3/en_ner_bc5cdr_md-0.5.3.tar.gz
 ./models/sent2vec/.
-faiss-cpu
+faiss-cpu==1.8.0
 huggingface_hub
-langchain
-sentence_transformers
-selenium
-chromedriver
+langchain==0.1.16
+sentence_transformers==2.7.0
+selenium==4.20.0
+chromedriver==2.24.1
 tqdm
 pandas
 openpyxl
